<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeeBa</string>
    <string name="action_settings">Settings</string>
    <string name="welcomeString">welcome to MeeBa</string>
    <string name="signed_out_status">click below to sign in with google</string>
    <string name="signed_in_status">You are signed in as %s</string>
    <string name="unknown">Unknown</string>

    <!-- Dashboard -->
    <string name="txtWelcome">WELCOME</string>
    <string name="txtLogout">Sign Out</string>
    <string name="btnInvite">Invite</string>
    <string name="txtCreateEvent">+  Create New Event</string>
    <string name="invitation_accept">Accept</string>
    <string name="invitation_decline">Decline</string>
    <string name="txtInviteYourFriends">Invite your friends!</string>
    <string name="create_new_event">Create New Event</string>
    <string name="when">When?</string>
    <string name="where">Where?</string>
    <string name="title">Event Title</string>
    <string name="next">Next</string>
    <string name="refreshing_events">Refreshing Events</string>
    <string name="please_wait">Please wait !</string>
    <string name="invite">Invite</string>
    <string name="phone_number">Phone Number:</string>
    <string name="ok">Ok</string>
    <string name="actionbar_search">Search Contacts</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="bad_event_details_input">You must input a title, location and a time</string>
    <string name="add_guest">Add Guest</string>
    <string name="select_contacts">Type contact name...</string>
    <string name="add_event_guests">Add Event Guests</string>

    <string-array
        name="drawer_event_filters">
        <item>"All Events"</item>
        <item>"My Events"</item>
        <item>"Going"</item>
        <item>"Not Going "</item>
    </string-array>


    <array name="nav_drawer_icons">
        <item>@drawable/calendar_small</item>
        <item>@drawable/calendar_me</item>
        <item>@drawable/calendar_v</item>
        <item>@drawable/calendar_x</item>
    </array>


    <color name="green">#33C733</color>
    <color name="red">#C73333</color>
    <color name="white">#DADADA</color>
    <color name="blue">#4979A9</color>
    <color name="black">#000000</color>
    <!--<color name="background">#3b3b3b</color>-->

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">30dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <!-- ACRA -->
    <string name="acra">Send an e-mail crash report</string>
    <string name="acra_crash">The app just crashed. Please send us an email containing the crash report!</string>
    <string name="crash_toast_text">Ooooops! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="crash_dialog_title">MeeBa has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">Please add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>

    <string name="create_event">Create Event</string>
    <string name="settings">Settings</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="edit_event_details">Edit event details</string>
    <string name="share_event">Share The Event</string>
    <string name="sharedpreferences">sharedpreferences</string>
    <string name="database_version">database_version</string>
    <string name="invitation_accept_toast">Accepting Invitation...</string>
    <string name="invitation_decline_toast">Declining invitation...</string>
    <string name="generated">Generated by MeeBa for Android: http://goo.gl/gWGoKx</string>

    <!-- ListViewAnimations -->
    <string name="itemdeleted">Guest deleted</string>
    <string name="taptoundo">Tap to undo</string>
    <plurals name="countdown_seconds">
        <item quantity="one">Dismissing in 1</item>
        <item quantity="other">Dismissing in %d</item>
    </plurals>
    <string name="countdown_dismissing">Dismissing...</string>
</resources>
