<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/dialog_edit_event_layout">

        <com.meeba.google.view.ClearableEditText
            android:hint="@string/title"
            android:textColorHint="#888"
            android:layout_margin="10dp"
            android:inputType="textCapSentences"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleTxtUser"
            android:layout_gravity="center_horizontal"
            android:imeOptions="actionNext"
            android:drawableLeft="@drawable/android_notepad"
            android:drawablePadding="5dp" />

        <com.meeba.google.view.ClearableEditText
            android:hint="@string/when"
            android:textColorHint="#888"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="datetime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/whenTxtUser"
            android:layout_gravity="center_horizontal"
            android:imeOptions="actionNext"
            android:drawableLeft="@drawable/clock"
            android:drawablePadding="5dp" />

        <com.meeba.google.view.AutoCompleteClearableEditText
            style="@style/MeebaStyle"
            android:hint="@string/where"
            android:textColorHint="#888"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="textCapSentences|textNoSuggestions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/whereTxtUser"
            android:layout_gravity="center_horizontal"
            android:imeOptions="actionDone"
            android:drawableLeft="@drawable/earth"
            android:dropDownVerticalOffset="5dp"
            android:drawablePadding="5dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/btnUpdate"
                android:text="@string/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnCancel"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>